docs/tests/nameres/custom_types/valid/Enum.src
// Valid

enum COLOR {
    RED, GREEN, BLUE
};

let COLOR col = RED;