docs/tests/nameres/custom_types/invalid/EnumVarAlreadyExists.src
// Valid

let int RED = true;
enum COLOR {
    RED, GREEN, BLUE    
};
let int BLUE = true;    